細かな修正

--- a/PoC3GPT_202408_提出時.ipynb
+++ b/PoC3GPT_202408_提出時.ipynb
@@ -579,20 +579,20 @@
     "files1 = ['C:\\\\Python\\\\MVP\\\\01_work\\\\docs\\\\03-gptapp\\\\docs01\\\\memberA.xlsx']\n",
     "files2 = ['C:\\\\Python\\\\MVP\\\\01_work\\\\docs\\\\03-gptapp\\\\docs02\\\\memberB.xlsx']\n",
     "files3 = ['C:\\\\Python\\\\MVP\\\\01_work\\\\docs\\\\03-gptapp\\\\docs03\\\\memberC.xlsx']\n",
-    "#files4 = ['C:\\\\Python\\\\MVP\\\\01_work\\\\docs\\\\03-gptapp\\\\docs04\\\\memberD.xlsx']\n",
+    "files4 = ['C:\\\\Python\\\\MVP\\\\01_work\\\\docs\\\\03-gptapp\\\\docs04\\\\memberD.xlsx']\n",
     "#example = ['C:\\\\Python\\\\MVP\\\\01_work\\\\docs\\\\03-gptapp\\\\Ans\\\\Ans.xlsx']\n",
     "\n",
     "# データの取得\n",
     "textsA = [extract_column_data(file) for file in files1]\n",
     "textsB = [extract_column_data(file) for file in files2]\n",
     "textsC = [extract_column_data(file) for file in files3]\n",
-    "#textsD = [extract_column_data(file) for file in files4]\n",
+    "textsD = [extract_column_data(file) for file in files4]\n",
     "\n",
     "# フラット化したリストを作成\n",
     "textsA_flat = [item for sublist in textsA for item in sublist]\n",
     "textsB_flat = [item for sublist in textsB for item in sublist]\n",
     "textsC_flat = [item for sublist in textsC for item in sublist]\n",
-    "#textsD_flat = [item for sublist in textsD for item in sublist]\n",
+    "textsD_flat = [item for sublist in textsD for item in sublist]\n",
     "\n",
     "questions = [extract_column_Question(file) for file in files1]\n",
     "questions_flat = [item for sublist in questions for item in sublist]\n",
