エンコーディングを修正

--- a/PoC3GPT_202408_提出時.ipynb
+++ b/PoC3GPT_202408_提出時.ipynb
@@ -185,7 +185,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT4.csv', index=False)\n"
+    "df_output.to_csv('summary_outputGPT4.csv', index=False, encoding='shift_jis')\n"
    ]
   },
   {
@@ -348,7 +348,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT3.5.csv', index=False)\n"
+    "df_output.to_csv('summary_outputGPT3.5.csv', index=False, encoding='shift_jis')\n"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT4.csv', index=False)\n"
+    "df_output.to_csv('summary_outputGPT4.csv', index=False, encoding='shift_jis')\n"
    ]
   },
   {
@@ -674,7 +674,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT3.5.csv', index=False)\n"
+    "df_output.to_csv('summary_outputGPT3.5.csv', index=False, encoding='shift_jis'\n"
    ]
   }
  ],
