--- a/PoC3GPT_202408_提出時.ipynb
+++ b/PoC3GPT_202408_提出時.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT4.csv', index=False, encoding='shift_jis')\n"
+    "df_output.to_csv('summary_outputGPT4.csv', index=False, encoding='shift_jis', errors='ignore')\n"
    ]
   },
   {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT3.5.csv', index=False, encoding='shift_jis')\n"
+    "df_output.to_csv('summary_outputGPT3.5.csv', index=False, encoding='shift_jis', errors='ignore')\n"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT4.csv', index=False, encoding='shift_jis')\n"
+    "df_output.to_csv('summary_outputGPT4.csv', index=False, encoding='shift_jis', errors='ignore')\n"
    ]
   },
   {
@@ -674,7 +674,7 @@
     "})\n",
     "\n",
     "# CSVファイルに出力\n",
-    "df_output.to_csv('summary_outputGPT3.5.csv', index=False, encoding='shift_jis'\n"
+    "df_output.to_csv('summary_outputGPT3.5.csv', index=False, encoding='shift_jis', errors='ignore')\n"
    ]
   }
  ],
